# primesieve_openmpi

./: CMakeLists.txt  Sieve.cpp  Sieve.h  main  main.cpp
